<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:id="@+id/onselectcolors" 
	android:background="@drawable/newborder">

	<LinearLayout android:layout_width="fill_parent"
		android:id="@+id/headerColor" android:layout_height="50dp"
		android:orientation="horizontal" android:gravity="top" 
		android:background="#0b6bb7" android:layout_gravity="center_vertical">
		
	    <LinearLayout
	        android:id="@+id/headerColor1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_weight="0.7"
	        android:orientation="horizontal" >

	        <ImageView
	            android:layout_width="50dp"
	            android:layout_height="40dp"
	           
	            android:background="@android:color/transparent"
	            android:src="@drawable/sta_logo" />

	        <TextView
	            android:id="@+id/vWB"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:layout_marginTop="0dp"
	            android:text="@string/app_name"
	            android:textColor="#ffffff"
	            android:textSize="18dp"
	            android:textStyle="normal"
				android:fontFamily="@string/fontfamily" >
	        </TextView>
	    </LinearLayout>

 

	</LinearLayout>

	 <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical"  
        android:scrollbarFadeDuration="0"
		android:scrollbarAlwaysDrawVerticalTrack="true">
		
             <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
			android:background="#ededed"
				 android:layout_margin="5dp">

	<LinearLayout android:layout_width="fill_parent" 
	     android:layout_height="fill_parent" android:layout_marginLeft="10dp" 
	      android:layout_marginRight="10dp" android:orientation="vertical" 
	       android:layout_marginTop="10dp">
	    
	    
	    
<TextView android:id="@+id/onactivitynamereassign"

		android:layout_width="fill_parent"
	android:layout_height="wrap_content"
		android:text="Generate Password"
	android:textColor="#111"
		android:textSize="14dp"
	android:padding="3dp"
	android:fontFamily="@string/fontfamily"
		 />


<View
             android:layout_width="fill_parent"
             android:layout_height="1dp"
             android:background="#B6B6B4" 
              android:layout_marginTop="5dp" 
                android:layout_marginBottom="10dp"/>


	<Spinner android:layout_width="fill_parent" 
         android:layout_height="40dp"
        android:prompt="@string/promt_project" 
         android:id="@+id/spinnerpwdstnlist"
		android:background="@drawable/selectorsp"
		android:fontFamily="@string/fontfamily">

	</Spinner>

		<LinearLayout
			android:orientation="horizontal"
		android:layout_width="fill_parent"
			android:layout_height="fill_parent"
		android:gravity="center_horizontal"
			android:layout_marginTop="20dp">

		<Button
			android:layout_width="fill_parent"
			android:layout_height="45dp"
			android:id="@+id/btngetpwd"
			android:text="Get Password"
			android:textSize="18dp"
		android:layout_weight="1"
			android:textColor="#fff"
			android:fontFamily="@string/fontfamily"
			android:background="@drawable/btn_pressed_glossy"/>

	</LinearLayout>
	    
	</LinearLayout>
	<LinearLayout android:layout_width="fill_parent" 
	     android:layout_height="wrap_content" android:layout_marginLeft="10dp" 
	      android:layout_marginRight="10dp" android:orientation="horizontal" 
	       android:layout_marginTop="10dp">
		<TextView 

		android:layout_width="wrap_content"
			android:layout_height="wrap_content"
		android:text="Password: "
			android:textColor="#111"
		android:textSize="14dp"
			android:fontFamily="@string/fontfamily"
		 />
		
		<TextView android:id="@+id/getpwd"
		android:textStyle="bold"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text=" "
		android:textColor="#000000"
		android:textSize="20dp"
		android:fontFamily="@string/fontfamily" />
	    
		
	    	</LinearLayout>
	    
	</LinearLayout>
	</ScrollView>
	
</LinearLayout>
